force-app/main/default/objects/Game_Player__c/Game_Player__c.object-meta.xml
<CustomObject>
    <description>Record of participation in a game</description>
    <label>Game Player</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Game Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>