force-app/main/default/objects/Game_Player__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EH</fullName>
                <default>true</default>
                <label>EH</label>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>2B</fullName>
            </value>
            <value>
                <fullName>SS</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
            </value>
            <value>
                <fullName>RF</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>LF</fullName>
            </value>
            <value>
                <fullName>DH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>